// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Menu Menu with avatar and different button colour 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={[Function]}
        >
          <button
            css={[Function]}
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              css={[Function]}
            >
              <span
                css={[Function]}
              >
                <div
                  css={[Function]}
                >
                  
                  TC
                </div>
              </span>
              <span
                css={[Function]}
              >
                <span>
                  Tom Cruise
                </span>
              </span>
              <span
                css={[Function]}
              >
                <span
                  css={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                      "padding": "0.125rem",
                    }
                  }
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={[Function]}
        >
          <button
            css={[Function]}
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              css={[Function]}
            >
              <span
                css={[Function]}
              >
                <div
                  css={[Function]}
                >
                  <img
                    src="https://material-ui.com/static/images/avatar/1.jpg"
                  />
                </div>
              </span>
              <span
                css={[Function]}
              >
                <span>
                  Tom Cruise
                </span>
              </span>
              <span
                css={[Function]}
              >
                <span
                  css={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                      "padding": "0.125rem",
                    }
                  }
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={[Function]}
        >
          <button
            css={[Function]}
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              css={[Function]}
            >
              <span
                css={[Function]}
              >
                <div
                  css={[Function]}
                >
                  
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                  
                </div>
              </span>
              <span
                css={[Function]}
              >
                <span>
                  Tom Cruise
                </span>
              </span>
              <span
                css={[Function]}
              >
                <span
                  css={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                      "padding": "0.125rem",
                    }
                  }
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={[Function]}
        >
          <button
            css={[Function]}
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              css={[Function]}
            >
              <span
                css={[Function]}
              >
                <div
                  css={[Function]}
                >
                  
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                  
                </div>
              </span>
              <span
                css={[Function]}
              >
                <span>
                  Tom Cruise
                </span>
              </span>
              <span
                css={[Function]}
              >
                <span
                  css={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                      "padding": "0.125rem",
                    }
                  }
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Menu Menu with option icon and different colour 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={[Function]}
        >
          <button
            css={[Function]}
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              css={[Function]}
            >
              <span
                css={[Function]}
              >
                <div
                  css={[Function]}
                >
                  
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                  
                </div>
              </span>
              <span
                css={[Function]}
              >
                <span>
                  More
                </span>
              </span>
              <span
                css={[Function]}
              >
                <span
                  css={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                      "padding": "0.125rem",
                    }
                  }
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={[Function]}
        >
          <button
            css={[Function]}
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              css={[Function]}
            >
              <span
                css={[Function]}
              >
                <div
                  css={[Function]}
                >
                  
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                  
                </div>
              </span>
              <span
                css={[Function]}
              >
                <span>
                  More
                </span>
              </span>
              <span
                css={[Function]}
              >
                <span
                  css={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                      "padding": "0.125rem",
                    }
                  }
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          css={[Function]}
        >
          <button
            css={[Function]}
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              css={[Function]}
            >
              <span
                css={[Function]}
              >
                <div
                  css={[Function]}
                >
                  
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                  
                </div>
              </span>
              <span
                css={[Function]}
              >
                <span>
                  More
                </span>
              </span>
              <span
                css={[Function]}
              >
                <span
                  css={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                      "padding": "0.125rem",
                    }
                  }
                  onClick={[Function]}
                >
                  <span
                    css={[Function]}
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Menu Menu with selection handler 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div>
    <div>
      Selected: 
      <b>
        -
      </b>
    </div>
    <div
      role="button"
    >
      <div
        css={[Function]}
      >
        <button
          css={[Function]}
          data-testid="button"
          disabled={false}
          onClick={[Function]}
        >
          <span
            css={[Function]}
          >
            <span
              css={[Function]}
            >
              <span>
                More
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
